--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
+.main {
+  width: 200px;
+  background-color: purple;
+  border-left: 5px solid green;
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+}
 
-/* Your CSS Code here. */
+.heading {
+  color: white;
+  font-size: 30px;
+	text-decoration: underline ;
+}
