--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,11 @@
 .main {
-  width: 200px;
-  background-color: purple;
-  border-left: 5px solid green;
-  padding: 10px;
-  font-size: 20px;
-  color: white;
+	background-color: purple;
+	width: 200px;
+	border-left: 5px solid green;
+	padding: 10px;
 }
 
-.heading {
-  color:rgb(255, 255, 255);
-  font-size: 30px;
-	text-decoration: underline ;
+#heading {
+	font-size: 20px;
+	color: white;
 }
